--- a/new/main_old.scss
+++ b/new/main_old.scss
@@ -22,10 +22,8 @@ html {
 	font-family: $body-font;
 	display: flex;
 	flex-flow: row wrap;
-	margin: 0;
 	padding-left: 2%;
 	.intro-name {
-		flex: 0 1 100%;
 		padding-top: 10px;
 		font-family: $title-font;
 		display: block;
@@ -33,23 +31,16 @@ html {
 		font-size: 40px;
 	}
 	.definition {
-		flex: 0 1 100%;
-		height: 40px;
 		font-family: $title-font;
 		display: block;
 	}
 	.abt-container {
-		display: flex;
-		flex-flow: row-reverse nowrap;
-		align-items: flex-start;
 		.my_img{
-			justify-content: center;
 			float: right;
-			//height: 50vw;
-			height: 500px;
+			height: 50vw;
 			position: relative;
 			top: 50%;
-			transform: translateY(-10%);
+			transform: translateY(-20%);
 		}
 
 		.bio {
@@ -61,13 +52,12 @@ html {
 		}
 	}
 	.section {
-		flex: 0 1 100%;
 		padding-left: -2%;
 		position: relative;
 		display: inline-block;
 		font-family: $body-font;
 		font-weight: 300;
-		margin-top: 10px;
+		padding-top: 40px;
 	}
 
 	.work-container {
@@ -184,8 +174,6 @@ html {
 	}
 
 	.nav-bg{
-		display: flex;
-		flex: 0 1 100%;
 		position: fixed;
 		margin: 0;
 		padding: 0;
@@ -195,7 +183,6 @@ html {
 		opacity: 0.95;
 		z-index: 0;
 		.bottom-nav{
-			flex: 0 1 100%;
 			z-index: 1;
 			background: white;
 			bottom: 20px;
