--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -19,10 +19,8 @@ html {
   font-family: "Raleway", sans-serif;
   display: flex;
   flex-flow: row wrap;
-  margin: 0;
-  padding-left: 2%;
 }
-/* line 27, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .container .intro-name {
   flex: 0 1 100%;
   padding-top: 10px;
@@ -31,36 +29,35 @@ html {
   color: #A9A9A9;
   font-size: 40px;
 }
-/* line 35, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .container .definition {
   flex: 0 1 100%;
   height: 40px;
   font-family: "Nunito", sans-serif;
   display: block;
 }
-/* line 41, ../sass/main.scss */
+/* line 39, ../sass/main.scss */
 .container .abt-container {
   display: flex;
   flex-flow: row-reverse nowrap;
   align-items: flex-start;
 }
-/* line 45, ../sass/main.scss */
+/* line 43, ../sass/main.scss */
 .container .abt-container .my_img {
   justify-content: center;
-  float: right;
   height: 500px;
   position: relative;
   top: 50%;
   transform: translateY(-10%);
 }
-/* line 55, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
 .container .abt-container .bio {
   float: left;
   margin: 0;
   padding-left: 15px;
   font-weight: 300;
 }
-/* line 63, ../sass/main.scss */
+/* line 59, ../sass/main.scss */
 .container .section {
   flex: 0 1 100%;
   padding-left: -2%;
@@ -70,7 +67,12 @@ html {
   font-weight: 300;
   margin-top: 10px;
 }
-/* line 75, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
+.container .work-container {
+  flex-flow: row nowrap;
+  flex: 0 1 100%;
+}
+/* line 72, ../sass/main.scss */
 .container .work-container .software {
   float: left;
   height: 40vw;
@@ -80,17 +82,17 @@ html {
   margin-bottom: 50px;
   text-align: center;
 }
-/* line 84, ../sass/main.scss */
+/* line 81, ../sass/main.scss */
 .container .work-container .software .projects {
   display: block;
   margin: 0;
 }
-/* line 87, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 .container .work-container .software .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 90, ../sass/main.scss */
+/* line 87, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -98,11 +100,11 @@ html {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 96, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 100, ../sass/main.scss */
+/* line 97, ../sass/main.scss */
 .container .work-container .software .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -114,7 +116,7 @@ html {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 113, ../sass/main.scss */
+/* line 110, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
@@ -126,11 +128,11 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 125, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 128, ../sass/main.scss */
+/* line 125, ../sass/main.scss */
 .container .work-container .software .project-info {
   display: block;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -138,33 +140,33 @@ html {
   width: 100%;
   height: 100%;
 }
-/* line 134, ../sass/main.scss */
+/* line 131, ../sass/main.scss */
 .container .work-container .software .project-info .project-content {
   height: 100%;
 }
-/* line 136, ../sass/main.scss */
+/* line 133, ../sass/main.scss */
 .container .work-container .software .project-info .project-content .proj-image {
   width: 100%;
 }
-/* line 141, ../sass/main.scss */
+/* line 138, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .cancel {
   cursor: pointer;
   position: relative;
   width: 100%;
   height: 30px;
 }
-/* line 147, ../sass/main.scss */
+/* line 144, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .project-title {
   font-weight: bold;
   position: relative;
   text-align: center;
 }
-/* line 153, ../sass/main.scss */
+/* line 150, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .proj-description-detail {
   text-align: left;
   position: relative;
 }
-/* line 161, ../sass/main.scss */
+/* line 158, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
@@ -173,7 +175,7 @@ html {
   margin-top: 50px;
   margin-bottom: 50px;
 }
-/* line 169, ../sass/main.scss */
+/* line 166, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
@@ -185,13 +187,13 @@ html {
   margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 180, ../sass/main.scss */
+/* line 177, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 186, ../sass/main.scss */
+/* line 183, ../sass/main.scss */
 .container .nav-bg {
-  display: flex;
+  display: block;
   flex: 0 1 100%;
   position: fixed;
   margin: 0;
@@ -202,7 +204,7 @@ html {
   opacity: 0.95;
   z-index: 0;
 }
-/* line 197, ../sass/main.scss */
+/* line 194, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   flex: 0 1 100%;
   z-index: 1;
@@ -210,24 +212,24 @@ html {
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 204, ../sass/main.scss */
+/* line 201, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 211, ../sass/main.scss */
+/* line 208, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 214, ../sass/main.scss */
+/* line 211, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 219, ../sass/main.scss */
+/* line 216, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -237,7 +239,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 229, ../sass/main.scss */
+/* line 226, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -245,7 +247,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 235, ../sass/main.scss */
+/* line 232, ../sass/main.scss */
 #jahan {
   width: auto;
   height: auto;
@@ -253,7 +255,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 243, ../sass/main.scss */
+/* line 240, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -269,7 +271,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 255, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -278,7 +280,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 255, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -287,7 +289,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 255, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -296,7 +298,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 255, ../sass/main.scss */
+/* line 252, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
