Added overflow scrolling for better UX

--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -8,6 +8,7 @@ html, body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
 html {
@@ -24,8 +25,7 @@ html {
 	flex-flow: row wrap;
 	.intro-name {
 		flex: 0 1 100%;
-		padding-top: 10px;
-		font-family: $title-font;
+		font-family: $body-font;
 		display: block;
 		color: $text-color;
 		font-size: 40px;
@@ -37,14 +37,16 @@ html {
 		display: block;
 	}
 	.abt-container {
+		overflow-y: auto;
 		display: flex;
+		margin-bottom: 50px;
 		flex-flow: row-reverse nowrap;
 		align-items: flex-start;
 		.my_img{
-			justify-content: center;
+			//justify-content: center;
 			height: 500px;
 			position: relative;
-			top: 50%;
+			top: 20px;
 			transform: translateY(-10%);
 		}
 
@@ -67,16 +69,15 @@ html {
 	}
 
 	.work-container {
+		margin-bottom: 50px;
+		overflow-y: auto;
 		flex-flow: row nowrap;
 		flex: 0 1 100%;
 		.software{
 			float: left;
-			//border-right: 0.5px solid #D8D8D8;
 			height: 40vw;
 			position: relative;
 			display: block;
-			margin-top: 50px;
-			margin-bottom: 50px;
 			text-align: center;
 			.projects{
 				display: block;
@@ -157,12 +158,9 @@ html {
 
 		.design {
 			float: right;
-			//border: 1px solid #000000;
 			height: 40vw;
 			position: relative;
 			display: inline-block;
-			margin-top: 50px;
-			margin-bottom: 50px;
 			#design{
 				cursor:pointer;
 				display: block;
@@ -192,8 +190,6 @@ html {
 		opacity: 0.95;
 		z-index: 0;
 		.bottom-nav{
-			flex: 0 1 100%;
-			z-index: 1;
 			background: white;
 			bottom: 20px;
 			border-bottom: 1px solid #000000;
