--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -46,19 +46,19 @@ html {
 }
 /* line 45, ../sass/main.scss */
 .container .abt-container .my_img {
-  height: 500px;
+  height: 520px;
   position: relative;
-  top: 20px;
+  top: 30px;
   transform: translateY(-10%);
 }
-/* line 53, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .container .abt-container .bio {
   float: left;
   margin: 0;
   padding-left: 15px;
   font-weight: 300;
 }
-/* line 61, ../sass/main.scss */
+/* line 59, ../sass/main.scss */
 .container .section {
   flex: 0 1 100%;
   padding-left: -2%;
@@ -68,32 +68,35 @@ html {
   font-weight: 300;
   margin-top: 10px;
 }
-/* line 71, ../sass/main.scss */
+/* line 69, ../sass/main.scss */
 .container .work-container {
   margin-bottom: 50px;
-  overflow-y: auto;
   flex-flow: row nowrap;
   flex: 0 1 100%;
 }
-/* line 76, ../sass/main.scss */
+/* line 73, ../sass/main.scss */
 .container .work-container .software {
+  overflow-y: auto;
   float: left;
   height: 40vw;
   position: relative;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 /* line 82, ../sass/main.scss */
 .container .work-container .software .projects {
   display: block;
   margin: 0;
+  align-self: flex-start;
 }
-/* line 85, ../sass/main.scss */
+/* line 86, ../sass/main.scss */
 .container .work-container .software .projects .project-container {
   display: table;
   content: " ";
 }
-/* line 88, ../sass/main.scss */
+/* line 89, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell {
   cursor: pointer;
   font-weight: bold;
@@ -101,11 +104,11 @@ html {
   padding: 10px;
   transition: .2s ease-in-out;
 }
-/* line 94, ../sass/main.scss */
+/* line 95, ../sass/main.scss */
 .container .work-container .software .projects .project-container .projectCell .projectContent:hover {
   transform: scale(1.1);
 }
-/* line 98, ../sass/main.scss */
+/* line 99, ../sass/main.scss */
 .container .work-container .software .projects .project-container .description {
   width: 80%;
   text-align: center;
@@ -117,23 +120,18 @@ html {
   font-size: 14px;
   line-height: 1.8;
 }
-/* line 111, ../sass/main.scss */
+/* line 112, ../sass/main.scss */
 .container .work-container .software #code {
   cursor: pointer;
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 123, ../sass/main.scss */
+/* line 119, ../sass/main.scss */
 .container .work-container .software #code:hover {
   transform: scale(1.1);
 }
-/* line 126, ../sass/main.scss */
+/* line 122, ../sass/main.scss */
 .container .work-container .software .project-info {
   display: block;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -141,56 +139,53 @@ html {
   width: 100%;
   height: 100%;
 }
-/* line 132, ../sass/main.scss */
+/* line 128, ../sass/main.scss */
 .container .work-container .software .project-info .project-content {
   height: 100%;
 }
-/* line 134, ../sass/main.scss */
+/* line 130, ../sass/main.scss */
 .container .work-container .software .project-info .project-content .proj-image {
   width: 100%;
 }
-/* line 139, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .cancel {
   cursor: pointer;
   position: relative;
   width: 100%;
   height: 30px;
 }
-/* line 145, ../sass/main.scss */
+/* line 141, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .project-title {
   font-weight: bold;
   position: relative;
   text-align: center;
 }
-/* line 151, ../sass/main.scss */
+/* line 147, ../sass/main.scss */
 .container .work-container .software .project-info .project-information .proj-description-detail {
   text-align: left;
   position: relative;
 }
-/* line 159, ../sass/main.scss */
+/* line 155, ../sass/main.scss */
 .container .work-container .design {
   float: right;
   height: 40vw;
   position: relative;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-/* line 164, ../sass/main.scss */
+/* line 162, ../sass/main.scss */
 .container .work-container .design #design {
   cursor: pointer;
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
   transition: .2s ease-in-out;
 }
-/* line 175, ../sass/main.scss */
+/* line 168, ../sass/main.scss */
 .container .work-container .design #design:hover {
   transform: scale(1.1);
 }
-/* line 181, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .nav-bg {
   display: block;
   flex: 0 1 100%;
@@ -203,30 +198,30 @@ html {
   opacity: 0.95;
   z-index: 0;
 }
-/* line 192, ../sass/main.scss */
+/* line 185, ../sass/main.scss */
 .container .nav-bg .bottom-nav {
   background: white;
   bottom: 20px;
   border-bottom: 1px solid #000000;
 }
-/* line 197, ../sass/main.scss */
+/* line 190, ../sass/main.scss */
 .container .nav-bg .bottom-nav .content {
   display: inline;
   text-align: center;
 }
 
-/* line 204, ../sass/main.scss */
+/* line 197, ../sass/main.scss */
 ul {
   list-style: none;
 }
 
-/* line 207, ../sass/main.scss */
+/* line 200, ../sass/main.scss */
 li {
   cursor: pointer;
   display: inline-block;
   margin: 0 3% 0 3%;
 }
-/* line 212, ../sass/main.scss */
+/* line 205, ../sass/main.scss */
 li .cross {
   display: block;
   position: absolute;
@@ -236,7 +231,7 @@ li .cross {
   width: 30px;
 }
 
-/* line 222, ../sass/main.scss */
+/* line 215, ../sass/main.scss */
 .nav_line {
   display: block;
   position: relative;
@@ -244,7 +239,7 @@ li .cross {
   margin-left: 0;
 }
 
-/* line 228, ../sass/main.scss */
+/* line 221, ../sass/main.scss */
 #jahan {
   width: auto;
   height: auto;
@@ -252,7 +247,7 @@ li .cross {
   max-height: 100%;
 }
 
-/* line 236, ../sass/main.scss */
+/* line 229, ../sass/main.scss */
 .definition span {
   position: absolute;
   font-family: "Nunito", sans-serif;
@@ -268,7 +263,7 @@ li .cross {
   animation: rotateDef 15s linear infinite 0s;
 }
 
-/* line 248, ../sass/main.scss */
+/* line 241, ../sass/main.scss */
 .definition span:nth-child(2) {
   -webkit-animation-delay: 3s;
   -moz-animation-delay: 3s;
@@ -277,7 +272,7 @@ li .cross {
   animation-delay: 3s;
 }
 
-/* line 248, ../sass/main.scss */
+/* line 241, ../sass/main.scss */
 .definition span:nth-child(3) {
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
@@ -286,7 +281,7 @@ li .cross {
   animation-delay: 6s;
 }
 
-/* line 248, ../sass/main.scss */
+/* line 241, ../sass/main.scss */
 .definition span:nth-child(4) {
   -webkit-animation-delay: 9s;
   -moz-animation-delay: 9s;
@@ -295,7 +290,7 @@ li .cross {
   animation-delay: 9s;
 }
 
-/* line 248, ../sass/main.scss */
+/* line 241, ../sass/main.scss */
 .definition span:nth-child(5) {
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
