--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -1,4 +1,13 @@
-/* line 6, ../sass/main.scss */
+@font-face {
+  font-family: default-font;
+  src: url(../AvenirLTStd-Light.otf);
+}
+@font-face {
+  font-family: default-font;
+  src: url(../AvenirLTStd-Roman.otf);
+  font-weight: bold;
+}
+/* line 15, ../sass/main.scss */
 html, body {
   width: 100%;
   height: 100%;
@@ -6,49 +15,92 @@ html, body {
   padding: 0;
 }
 
-/* line 13, ../sass/main.scss */
+/* line 22, ../sass/main.scss */
 .container {
+  font-family: default-font;
   display: flex;
-  flex-flow: row;
+  flex-flow: column;
 }
-/* line 16, ../sass/main.scss */
+/* line 26, ../sass/main.scss */
 .container .upper-nav {
   width: 100%;
   background: white;
   justify-content: center;
   align-items: center;
 }
-/* line 21, ../sass/main.scss */
+/* line 31, ../sass/main.scss */
 .container .upper-nav .my-logo {
   display: flex;
   justify-content: center;
 }
-/* line 26, ../sass/main.scss */
+/* line 36, ../sass/main.scss */
 .container .upper-nav .nav-container {
   width: 100%;
   display: flex;
   flex-flow: column;
 }
-/* line 30, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar {
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #e6e9eb;
 }
-/* line 34, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains {
   display: flex;
-  width: 50%;
+  width: 40%;
   justify-content: center;
   flex-flow: row;
 }
-/* line 39, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items {
   display: flex;
   justify-content: center;
 }
-/* line 42, ../sass/main.scss */
+/* line 52, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items img {
-  height: 40%;
-  width: 60%;
+  display: block;
+  margin: auto;
+  height: 30%;
+  width: 45%;
+}
+/* line 63, ../sass/main.scss */
+.container .main-content {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+/* line 67, ../sass/main.scss */
+.container .main-content .about {
+  width: 80%;
+  line-height: 1.7em;
+}
+/* line 72, ../sass/main.scss */
+.container .footer {
+  display: block;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  background: white;
+  justify-content: center;
+}
+/* line 79, ../sass/main.scss */
+.container .footer .social-container {
+  display: flex;
+  height: 80px;
+  justify-content: center;
+  flex-flow: row;
+  border-top: 1px solid #e6e9eb;
+}
+/* line 85, ../sass/main.scss */
+.container .footer .social-container .icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+/* line 89, ../sass/main.scss */
+.container .footer .social-container .icons img {
+  display: block;
+  margin: auto;
+  width: 40%;
 }
