--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -20,7 +20,9 @@ html, body {
 }
 
 .container {
-	height:100%;
+	padding: 0;
+	margin: 0;
+	width: 100%;
 	font-family: default-font;
 	display: flex;
 	flex-flow: column;
@@ -29,10 +31,11 @@ html, body {
 		background: white;
 		justify-content: center;
 		align-items: center;
+		border-bottom: 1px solid #e6e9eb;
 		.my-logo {
 			display: flex;
 			justify-content: center;
-			
+
 		}
 		.nav-container {
 			width: 100%;
@@ -41,16 +44,36 @@ html, body {
 			.nav-bar {
 				display: flex;
 				justify-content: center;
-				border-bottom: 1px solid #e6e9eb;
+				align-items: center;
+				flex-flow: column;
 				.contains {
 					display: flex;
-					width: 40%;
+					width: 50%;
 					justify-content: center;
 					flex-flow: row;
 					.items {
 						display: flex;
 						justify-content: center;
 						img{
+							pointer-events: none;
+							display: block;
+							margin: auto;
+							height: 30%;
+							width: 45%;
+						}
+					}
+				}
+				.work-contains {
+					margin-right: 11%;
+					width: 20%;
+					display: flex;
+					justify-content: center;
+					flex-flow: row;
+					.items {
+						display: flex;
+						justify-content: flex-start;
+						align-items: flex-start;
+						img {
 							display: block;
 							margin: auto;
 							height: 30%;
@@ -65,35 +88,83 @@ html, body {
 		display: flex;
 		position: relative;
 		justify-content: center;
+		line-height: 1.7em;
 		.about {
 			height: 100%;
 			width: 80%;
-			padding-bottom: 80px;
-			line-height: 1.7em;
+			padding-top: 30px;
+			padding-bottom: 30px;
+		}
+		.work {
+			height: 100%;
+			width: 80%;
+			padding-top: 30px;
+			padding-bottom: 30px;
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			.projects{
+				display: block;
+				align-self: flex-start;
+				.project-container{
+					display: table;
+					content: " ";
+					.projectCell{
+						cursor: pointer;
+						font-weight: bold;
+						font-size: large;
+						padding: 10px;
+						transition: .2s ease-in-out;
+						.projectContent:hover{
+							transform: scale(1.1);
+						}
+					}
+					.description {
+						width: 80%;
+						text-align: center;
+						margin: auto;
+						padding-bottom: 10px;
+						color: #444;
+						margin-top: 10px;
+						font-weight: lighter;
+						font-size: 14px;
+						line-height: 1.8;
+					}
+				}
+			}
 		}
 	}
-	.footer {
-		position: absolute;
+	.footer-wrapper{
+		margin-top: auto;
+		position: relative;
+		display: block;
 		height: 80px;
-		left: 0;
 		bottom: 0;
-		width: 100%;
-		background: white;
-		justify-content: center;
-		.social-container {
-			display: flex;
+		.footer {
+			position: absolute;
 			height: 80px;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			background: white;
 			justify-content: center;
-			flex-flow: row;
-			border-top: 1px solid #e6e9eb;
-			.icons {
+			.social-container {
 				display: flex;
-				justify-content: space-around;
-				align-items: center;
-				img {
-					display: block;
-					margin: auto;
-					width: 40%;
+				height: 80px;
+				justify-content: center;
+				flex-flow: row;
+				border-top: 1px solid #e6e9eb;
+				.icons {
+					display: flex;
+					justify-content: space-around;
+					align-items: center;
+					img {
+						display: block;
+						margin: auto;
+						width: 40%;
+					}
 				}
 			}
 		}
