--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -17,69 +17,150 @@ html, body {
 
 /* line 22, ../sass/main.scss */
 .container {
-  height: 100%;
+  padding: 0;
+  margin: 0;
+  width: 100%;
   font-family: default-font;
   display: flex;
   flex-flow: column;
 }
-/* line 27, ../sass/main.scss */
+/* line 29, ../sass/main.scss */
 .container .upper-nav {
   width: 100%;
   background: white;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #e6e9eb;
 }
-/* line 32, ../sass/main.scss */
+/* line 35, ../sass/main.scss */
 .container .upper-nav .my-logo {
   display: flex;
   justify-content: center;
 }
-/* line 37, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
 .container .upper-nav .nav-container {
   width: 100%;
   display: flex;
   flex-flow: column;
 }
-/* line 41, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar {
   display: flex;
   justify-content: center;
-  border-bottom: 1px solid #e6e9eb;
+  align-items: center;
+  flex-flow: column;
 }
-/* line 45, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains {
   display: flex;
-  width: 40%;
+  width: 50%;
   justify-content: center;
   flex-flow: row;
 }
-/* line 50, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items {
   display: flex;
   justify-content: center;
 }
-/* line 53, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .container .upper-nav .nav-container .nav-bar .contains .items img {
+  pointer-events: none;
   display: block;
   margin: auto;
   height: 30%;
   width: 45%;
 }
-/* line 64, ../sass/main.scss */
+/* line 66, ../sass/main.scss */
+.container .upper-nav .nav-container .nav-bar .work-contains {
+  margin-right: 11%;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  flex-flow: row;
+}
+/* line 72, ../sass/main.scss */
+.container .upper-nav .nav-container .nav-bar .work-contains .items {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+/* line 76, ../sass/main.scss */
+.container .upper-nav .nav-container .nav-bar .work-contains .items img {
+  display: block;
+  margin: auto;
+  height: 30%;
+  width: 45%;
+}
+/* line 87, ../sass/main.scss */
 .container .main-content {
   display: flex;
   position: relative;
   justify-content: center;
+  line-height: 1.7em;
 }
-/* line 68, ../sass/main.scss */
+/* line 92, ../sass/main.scss */
 .container .main-content .about {
   height: 100%;
   width: 80%;
-  padding-bottom: 80px;
-  line-height: 1.7em;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-/* line 75, ../sass/main.scss */
-.container .footer {
+/* line 98, ../sass/main.scss */
+.container .main-content .work {
+  height: 100%;
+  width: 80%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+/* line 108, ../sass/main.scss */
+.container .main-content .work .projects {
+  display: block;
+  align-self: flex-start;
+}
+/* line 111, ../sass/main.scss */
+.container .main-content .work .projects .project-container {
+  display: table;
+  content: " ";
+}
+/* line 114, ../sass/main.scss */
+.container .main-content .work .projects .project-container .projectCell {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: large;
+  padding: 10px;
+  transition: .2s ease-in-out;
+}
+/* line 120, ../sass/main.scss */
+.container .main-content .work .projects .project-container .projectCell .projectContent:hover {
+  transform: scale(1.1);
+}
+/* line 124, ../sass/main.scss */
+.container .main-content .work .projects .project-container .description {
+  width: 80%;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 10px;
+  color: #444;
+  margin-top: 10px;
+  font-weight: lighter;
+  font-size: 14px;
+  line-height: 1.8;
+}
+/* line 139, ../sass/main.scss */
+.container .footer-wrapper {
+  margin-top: auto;
+  position: relative;
+  display: block;
+  height: 80px;
+  bottom: 0;
+}
+/* line 145, ../sass/main.scss */
+.container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
   left: 0;
@@ -88,22 +169,22 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 83, ../sass/main.scss */
-.container .footer .social-container {
+/* line 153, ../sass/main.scss */
+.container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
   justify-content: center;
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 89, ../sass/main.scss */
-.container .footer .social-container .icons {
+/* line 159, ../sass/main.scss */
+.container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 93, ../sass/main.scss */
-.container .footer .social-container .icons img {
+/* line 163, ../sass/main.scss */
+.container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
   width: 40%;
