--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -35,6 +35,10 @@ html, body {
 		.my-logo {
 			display: flex;
 			justify-content: center;
+			img {
+				width: 209px;
+				height: 329px;
+			}
 
 		}
 		.nav-container {
@@ -64,7 +68,7 @@ html, body {
 					}
 				}
 				.work-contains {
-					margin-right: 11%;
+					margin-right: 13%;
 					width: 20%;
 					display: flex;
 					justify-content: center;
@@ -132,6 +136,26 @@ html, body {
 						font-size: 14px;
 						line-height: 1.8;
 					}
+				}
+			}
+		}
+		.notes {
+			height: 100%;
+			width: 80%;
+			padding-top: 30px;
+			padding-bottom: 30px;
+			display: flex;
+			flex-flow: column;
+			align-items: center;
+			text-align: center;
+			.projectCell{
+				font-weight: bold;
+				font-size: large;
+			}
+			.projectContent{
+				img{
+					width: 200px;
+					height: 200px;
 				}
 			}
 		}
