added notes link

--- a/new/sass/main.scss
+++ b/new/sass/main.scss
@@ -158,6 +158,11 @@ html, body {
 					height: 200px;
 				}
 			}
+			.description {
+				font-weight: lighter;
+				font-size: 14px;
+				line-height: 1.7em;
+			}
 		}
 	}
 	.footer-wrapper{
