--- a/new/stylesheets/main.css
+++ b/new/stylesheets/main.css
@@ -177,7 +177,13 @@ html, body {
   width: 200px;
   height: 200px;
 }
-/* line 163, ../sass/main.scss */
+/* line 161, ../sass/main.scss */
+.container .main-content .notes .description {
+  font-weight: lighter;
+  font-size: 14px;
+  line-height: 1.7em;
+}
+/* line 168, ../sass/main.scss */
 .container .footer-wrapper {
   margin-top: auto;
   position: relative;
@@ -185,7 +191,7 @@ html, body {
   height: 80px;
   bottom: 0;
 }
-/* line 169, ../sass/main.scss */
+/* line 174, ../sass/main.scss */
 .container .footer-wrapper .footer {
   position: absolute;
   height: 80px;
@@ -195,7 +201,7 @@ html, body {
   background: white;
   justify-content: center;
 }
-/* line 177, ../sass/main.scss */
+/* line 182, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container {
   display: flex;
   height: 80px;
@@ -203,13 +209,13 @@ html, body {
   flex-flow: row;
   border-top: 1px solid #e6e9eb;
 }
-/* line 183, ../sass/main.scss */
+/* line 188, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-/* line 187, ../sass/main.scss */
+/* line 192, ../sass/main.scss */
 .container .footer-wrapper .footer .social-container .icons img {
   display: block;
   margin: auto;
